--- a/app/category.html
+++ b/app/category.html
@@ -149,163 +149,22 @@
 	    </div>
 	</header>
 
-	<a href="" class="whatsapp-floating">
-		<img src="images/icons/whatsapp.png" alt="">
-	</a>
-	
-	<section class="top-index">
-		
-		<div class="swiper-container slider-top">
-			<div class="top-cover"></div>
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/1.jpg" alt="">
-				</div>
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/2.jpg" alt="">
-				</div>
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/3.jpg" alt="">
-				</div>
-			</div>
-		</div>
+	<section class="top-inner">
+        <div class="section-inner">
+           <p class="title">אודות</p>
+           <div class="breadcrumbs">
+                <span>
+                <a href="#">ראשי</a> > <span class="breadcrumb_last" aria-current="page">אודות</span>
+                </span>
+            </div>
+        </div>
+    </section>
+    
+    <section class="products">
 		<div class="section-inner">
-			<div class="text">
-				<div class="logo">
-					<img src="images/index/logo.png" alt="" />
-				</div>
-				<p class="line-2">ציוד הלחימה הטוב בעולם</p>
-			</div>
+			<div class="section-title">כפפות איגרוף</div>
 
-			<div class="buttons">
-				<div class="button-underline-hover">
-					<span>צפה במוצרים</span>
-				</div>
-			</div>
-		</div>
-
-		<div class="wrap-scrolldownhoney" scroll-to="categories">
-			<div class="scrolldownhoney">
-				<svg height="30" width="10">
-					<circle class="scrolldownhoney-c1" cx="5" cy="15" r="2" />
-					<circle class="scrolldownhoney-c2" cx="5" cy="15" r="2" />
-				</svg>
-			</div>
-		</div>
-	</section>
-
-
-	<section class="categories">
-		<div class="section-title">
-			<span>קטלוג מוצרים</span>
-		</div>
-		<div class="section-inner">
-			<div class="boxes">
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/1.png" alt="">
-						</div>
-						<div class="text">
-							<span>כפפות</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/2.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני שוק</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/3.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני ראש</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/4.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני שיניים</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/5.png" alt="">
-						</div>
-						<div class="text">
-							<span>ביגוד</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/6.png" alt="">
-						</div>
-						<div class="text">
-							<span>OSO</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/7.png" alt="">
-						</div>
-						<div class="text">
-							<span>ציוד מאמנים</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/8.png" alt="">
-						</div>
-						<div class="text">
-							<span>שונות</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="contact-bottom">
-		<div class="section-inner">
-			<p class="title">
-				<span>צרו קשר לייעוץ וקבלת פרטים</span>
-			</p>
-			<div role="form" class="wpcf7" id="wpcf7-f5-o1" lang="en-US" dir="ltr">
-				<div class="screen-reader-response"></div>
-				<form action="/#wpcf7-f5-o1" method="post" class="wpcf7-form" novalidate="novalidate">
-				<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="שם מלא:"></span>
-				<span class="wpcf7-form-control-wrap tel-19"><input type="tel" name="tel-19" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-tel" aria-invalid="false" placeholder="טלפון:"></span>
-				<span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="אימייל:"></span>
-				<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="מטרת הפנייה:"></span>
-				<input type="submit" value="שליחה" class="wpcf7-form-control wpcf7-submit"><span class="ajax-loader"></span><div class="wpcf7-response-output wpcf7-display-none"></div></form>
-			</div>
-		</div>
-	</section>
-
-	<section class="products">
-		<div class="section-inner">
-			<div class="section-title">מוצרים מובילים</div>
-
+            
 			<div class="boxes">
 				<div class="box box-product">
 					<div class="sale">
@@ -459,85 +318,9 @@
 				</div>
 
 			</div>
-
-			<br><br><br>
-			<div class="centered">
-				<div class="button button-underline-hover dark"><span>מוצרים נוספים</span></div>
-			</div>
 		</div>
 	</section>
 
-
-	<section class="blog index">
-		<div class="section-inner">
-
-			<div class="section-title">
-				<span>מאמרים וטיפים</span>
-			</div>
-
-			<div class="boxes">
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/blog/1.png" alt="">
-						</div>
-						<div class="text">
-							<p class="title">
-								איך לחזור להתאמן אחרי הקורונה ולא ליפול על הפנים			</p>
-							<div class="desc">
-								<p>אז עם כל החיסונים ומקדם ההדבקה הנמוך נראה שאנחנו חוזרים לאט לאט לשגרה. המכונים נפתחו וגם אתם רוצים לחזור</p>
-								<div class="more">
-									<span>המשך קריאה</span>
-									<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/blog/2.png" alt="">
-						</div>
-						<div class="text">
-							<p class="title">
-								שלוש דרכים למניעת פציעת כף רגל בענפי הלחימה			</p>
-							<div class="desc">
-								<p>פציעת כף רגל הינה אחת הפציעות הנפוצות ביותר בענפי הלחימה ובאגרוף התאילנדי בפרט. כמובן שככל שרמת מיומנות הלוחם עולה</p>
-								<div class="more">
-									<span>המשך קריאה</span>
-									<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/blog/3.png" alt="">
-						</div>
-						<div class="text">
-							<p class="title">
-								מדריך: איך לבחור כפפות אגרוף נכונות			</p>
-							<div class="desc">
-								<p>כפפות אגרוף הן המוצר הראשון והבסיסי ביותר לכל מי שמתאמן באומניות לחימה. אין כמעט ענף לחימה שכפפות אגרוף הן</p>
-								<div class="more">
-									<span>המשך קריאה</span>
-									<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<br><br><br>
-			<div class="centered">
-				<div class="button button-underline-hover dark"><span>מאמרים נוספים</span></div>
-			</div>
-		</div>
-	</section>
 
 	<footer>
 		<div class="part-top">
@@ -621,26 +404,7 @@
 
 	<script>
 		$(document).ready(function ($) {
-			var mySwiper = new Swiper('.slider-top', {
-				slidesPerView: 1,
-				spaceBetween: 0,
-				loop: true,
-				effect: 'fade',
 
-				fadeEffect: {
-				    crossFade: true
-				},
-				autoplay: {
-				    delay: 3000,
-				    disableOnInteraction: false
-				},
-				speed: 1000,
-				pagination: {
-				    el: '.pagination-top',
-				    type: 'bullets',
-				    clickable: true,
-				},
-			});
 		});
 	</script>
 </body>
