--- a/app/blog.html
+++ b/app/blog.html
@@ -149,326 +149,18 @@
 	    </div>
 	</header>
 
-	<a href="" class="whatsapp-floating">
-		<img src="images/icons/whatsapp.png" alt="">
-	</a>
-	
-	<section class="top-index">
-		
-		<div class="swiper-container slider-top">
-			<div class="top-cover"></div>
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/1.jpg" alt="">
-				</div>
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/2.jpg" alt="">
-				</div>
-				<div class="swiper-slide">
-					<img src="images/index/slider-top/3.jpg" alt="">
-				</div>
-			</div>
-		</div>
-		<div class="section-inner">
-			<div class="text">
-				<div class="logo">
-					<img src="images/index/logo.png" alt="" />
-				</div>
-				<p class="line-2">ציוד הלחימה הטוב בעולם</p>
-			</div>
-
-			<div class="buttons">
-				<div class="button-underline-hover">
-					<span>צפה במוצרים</span>
-				</div>
-			</div>
-		</div>
-
-		<div class="wrap-scrolldownhoney" scroll-to="categories">
-			<div class="scrolldownhoney">
-				<svg height="30" width="10">
-					<circle class="scrolldownhoney-c1" cx="5" cy="15" r="2" />
-					<circle class="scrolldownhoney-c2" cx="5" cy="15" r="2" />
-				</svg>
-			</div>
-		</div>
-	</section>
-
-
-	<section class="categories">
-		<div class="section-title">
-			<span>קטלוג מוצרים</span>
-		</div>
-		<div class="section-inner">
-			<div class="boxes">
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/1.png" alt="">
-						</div>
-						<div class="text">
-							<span>כפפות</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/2.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני שוק</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/3.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני ראש</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/4.png" alt="">
-						</div>
-						<div class="text">
-							<span>מגני שיניים</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/5.png" alt="">
-						</div>
-						<div class="text">
-							<span>ביגוד</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/6.png" alt="">
-						</div>
-						<div class="text">
-							<span>OSO</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/7.png" alt="">
-						</div>
-						<div class="text">
-							<span>ציוד מאמנים</span>
-						</div>
-					</div>
-				</div>
-				<div class="box">
-					<div class="inner">
-						<div class="image">
-							<img src="images/index/cats/8.png" alt="">
-						</div>
-						<div class="text">
-							<span>שונות</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="contact-bottom">
-		<div class="section-inner">
-			<p class="title">
-				<span>צרו קשר לייעוץ וקבלת פרטים</span>
-			</p>
-			<div role="form" class="wpcf7" id="wpcf7-f5-o1" lang="en-US" dir="ltr">
-				<div class="screen-reader-response"></div>
-				<form action="/#wpcf7-f5-o1" method="post" class="wpcf7-form" novalidate="novalidate">
-				<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="שם מלא:"></span>
-				<span class="wpcf7-form-control-wrap tel-19"><input type="tel" name="tel-19" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-tel" aria-invalid="false" placeholder="טלפון:"></span>
-				<span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="אימייל:"></span>
-				<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="מטרת הפנייה:"></span>
-				<input type="submit" value="שליחה" class="wpcf7-form-control wpcf7-submit"><span class="ajax-loader"></span><div class="wpcf7-response-output wpcf7-display-none"></div></form>
-			</div>
-		</div>
-	</section>
-
-	<section class="products">
-		<div class="section-inner">
-			<div class="section-title">מוצרים מובילים</div>
-
-			<div class="boxes">
-				<div class="box box-product">
-					<div class="sale">
-						<span>מבצע</span>
-					</div>
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/1.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">SAFEJAWS FANGZ BLACK</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="new">
-						<span>חדש</span>
-					</div>
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/2.png" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">SAFEJAWS OGRE</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/3.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">BAG GLOVE CLOSE THUMB white black red,כפפות שק עור</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/4.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">KANOK olive green,כפפות איגרוף עור</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/5.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">PRO LACE-UP red white black,כפפות איגרוף עור</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/6.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">MMA Grappling Gloves "Extreme" Edition</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/7.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">Hanuman graphic</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-				<div class="box box-product">
-					<div class="inner">
-						<div class="part-top">
-							<div class="image">
-								<img src="images/index/products/8.jpg" alt="">
-							</div>
-						</div>
-						<div class="part-bottom">
-							<p class="title">THEI SHORTS black yellow</p>
-
-							<div class="price">
-								<del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>199.00</span></del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">₪</span>300.00</span></ins>
-							</div>
-
-							<a href="#" class="button">פרטים נוספים</a>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-			<br><br><br>
-			<div class="centered">
-				<div class="button button-underline-hover dark"><span>מוצרים נוספים</span></div>
-			</div>
-		</div>
-	</section>
-
-
-	<section class="blog index">
+	<section class="top-inner">
+        <div class="section-inner">
+           <p class="title">אודות</p>
+           <div class="breadcrumbs">
+                <span>
+                <a href="#">ראשי</a> > <span class="breadcrumb_last" aria-current="page">אודות</span>
+                </span>
+            </div>
+        </div>
+    </section>
+    
+    <section class="blog index">
 		<div class="section-inner">
 
 			<div class="section-title">
@@ -531,13 +223,9 @@
 					</div>
 				</div>
 			</div>
-
-			<br><br><br>
-			<div class="centered">
-				<div class="button button-underline-hover dark"><span>מאמרים נוספים</span></div>
-			</div>
 		</div>
 	</section>
+
 
 	<footer>
 		<div class="part-top">
@@ -621,26 +309,7 @@
 
 	<script>
 		$(document).ready(function ($) {
-			var mySwiper = new Swiper('.slider-top', {
-				slidesPerView: 1,
-				spaceBetween: 0,
-				loop: true,
-				effect: 'fade',
 
-				fadeEffect: {
-				    crossFade: true
-				},
-				autoplay: {
-				    delay: 3000,
-				    disableOnInteraction: false
-				},
-				speed: 1000,
-				pagination: {
-				    el: '.pagination-top',
-				    type: 'bullets',
-				    clickable: true,
-				},
-			});
 		});
 	</script>
 </body>
